Tweak issues#show styling
The subheadings were too big given the new styling of the metadata. Make
them smaller.

Still not perfect as the description "heading" is a bit smaller, but
this is still an improvement.

--- a/app/assets/stylesheets/_display.scss
+++ b/app/assets/stylesheets/_display.scss
@@ -58,13 +58,19 @@ h1.major {
   }
 }
 
-h2.major {
-  border-bottom: 1px solid #ccc;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  &.major {
+    border-bottom: 1px solid #ccc;
 
-  a:focus,
-  a:hover {
-    text-decoration: none;
-    color: #ee7714;
+    a:focus,
+    a:hover {
+      text-decoration: none;
+      color: #ee7714;
+    }
   }
 }
 
